@@ -1,15 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 1.0-consistent-system-intrinsic.patch 680 RMD160 71a2feeb7e856d37c5fa7c56e685f29ca1be0eaa SHA1 f0d388f1bea4badd8a127242057d8aeb01c8d974 SHA256 34f47d312af131414154a244218bb4e548d51a3d34b9ed4379c2ec90fba094ca
-DIST mammoth-1.0-src.tgz 319617 RMD160 32b6c9c994ba804fab352cc9cfaa3358784f1052 SHA1 79b5b3ef8873645cf102516df1de7d9b97f206c2 SHA256 7a21bc47db4a47cc5ebeeb4c46761a79eece0a802104a3d6189f388a03e59de2
-EBUILD mammoth-1.0.ebuild 1277 RMD160 c58f75e9bbcb596b2891426b977423774249b211 SHA1 21875e73e9d688d52530c642c8a10c1b3567c957 SHA256 cccace4b86da38b1cfe71d2d2003b6b289d6d4e6fb295f47161916ca5e20e736
-MISC ChangeLog 919 RMD160 1916e2c4c23f626b12d44416d0ce3c85769c49e4 SHA1 2cbb4968df104fb2f6751b88fa722961970d279d SHA256 a0293f98b9fce74c16cc8a2399fef51065da69ff38ffb741bf0f88e52ac2138f
-MISC metadata.xml 164 RMD160 2f441200f2672ab5f1efae7cbdb08b284603903c SHA1 61a50baedfd041e663d6c2a41a28b57e22dbb6de SHA256 f0897b09e661dc603041dab249d73253034659189becf1a34cca37a7d51ef72f
+AUX 1.0-consistent-system-intrinsic.patch 680 SHA256 34f47d312af131414154a244218bb4e548d51a3d34b9ed4379c2ec90fba094ca SHA512 98fac1ee502ead1109a36b80cce422cf36b0cbbc8971fd345ef1386d050382652211518a2957096d83f36fc44ba8339b9d23f82dcbc04845e5d65a3c6f66cb50 WHIRLPOOL 6512f997e0806eada9a6535c07c9cad1c1d95ed6736436782b0d5ef5346bda8bd596e450cf76baa3a376cbc36cf039d173404ff5f70df5753c29811604c154db
+DIST mammoth-1.0-src.tgz 319617 SHA256 7a21bc47db4a47cc5ebeeb4c46761a79eece0a802104a3d6189f388a03e59de2
+EBUILD mammoth-1.0.ebuild 1227 SHA256 e178417faff6327efa7b3f2f52355775791efee08d6532c7d2c3f4056acfaed1 SHA512 7faf41153e3486214cedc77235ed9d09d75802d9da0c7abbf1d71f54314e21017aca5a563ab17392ea5c30d0cd106b97ec2d225d1df857d2fa56493520c45e33 WHIRLPOOL 657770c80b7f8f895db6a6e0d25f8d28435b077caed688bb6c6b0b8760ff9f14559a2dd386dba998e16b8b6640eaeb6141a5528ee4ea9bf2f82baa56303b5d31
+MISC ChangeLog 1108 SHA256 d0fa1788a9b9698d1c0fbd4bdfe9364820e578556c781332482821c016d24979 SHA512 0b228af7ec08d1ccc37326da02ed2bf2809ae5b2ec0c1b4a6d87003920316227e2e3406eddb5db7a6d97314c272a6760434dc19e2b364115ea716ffcaa46d66a WHIRLPOOL 4ac4ba7924688422796abe649b6bcc4611274b7c9ad75e3cac144032dcc3eba01c0411db729743ffd3427da44eaafc12a711421839e697a9191e7c9ade74003a
+MISC metadata.xml 165 SHA256 560c375768c8e164d954d61924f110da785b4771012cb830963eaa267a319132 SHA512 f197731b98b313b41180dc4b553dab070b28f1badcb259973d528640166feaf8b6c48f56158431d1a4daac9b2873da05c2bd4e4ec269db310581d398a494d166 WHIRLPOOL 83774f905f256ee3dc965af16b472d0ac546314f46d02414b1da590eae1059f8076e63d67f763f9a3afb60a12072fd18c49937b039acbc8ac599ae45c0a04139
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEARECAAYFAk4AwcoACgkQgAnW8HDreRZIWQCePujNE5y1h56F8JBKAIgnYDfj
-logAoKo5p/lo3UTmTaVKDroIg+DeMEIr
-=UuGa
+iEYEAREIAAYFAlCBL6EACgkQgAnW8HDreRbhagCfRmb1CSRVH2FL0Li78shXj9Kc
+3XAAoJ4dthqnJeGLzWwAOl8OYFG79NBg
+=clQB
 -----END PGP SIGNATURE-----
