@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/mammoth/mammoth-1.0.ebuild,v 1.5 2011/06/21 16:07:37 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/mammoth/mammoth-1.0.ebuild,v 1.6 2012/10/19 10:46:56 jlec Exp $
 
 inherit autotools eutils fortran-2 flag-o-matic toolchain-funcs
 
@@ -14,11 +14,6 @@ LICENSE="mammoth"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
-
-DEPEND="
-	virtual/fortran
-	"
-RDEPEND="${DEPEND}"
 
 RESTRICT="fetch"
 
