@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/mammoth
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/mammoth/ChangeLog,v 1.5 2011/06/21 16:07:37 jlec Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/mammoth/ChangeLog,v 1.6 2012/10/19 10:46:56 jlec Exp $
+
+  19 Oct 2012; Justin Lecher <jlec@gentoo.org> mammoth-1.0.ebuild,
+  metadata.xml:
+  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
+  updated fortran-2.eclass
 
   21 Jun 2011; Justin Lecher <jlec@gentoo.org> mammoth-1.0.ebuild:
   Add dependency on virtual/fortran
